# fastapi-apps

./: .gitignore  AGENTS.md  LEARNINGS.md  README.md  SPEC.md  open_chrome.ps1  pyproject.toml  requirements.txt  start-chrome.ps1  ws_navigate.ps1
factory/: fastapi_app.service  nginx-dev.conf
scripts/: navigate-chrome.ps1  open_url.ps1
src/: logic_app.py  main.py  state.py
templates/: controller.html  logic.html  sleeping.html
tests/: test_logic_app.py  test_pages.py  test_schedule.py
