[project]
name = 'fastapi-watchdog'
version = '1.0.0'
description = 'FastAPI watchdog app with APScheduler for trading bot management'
requires-python = '>=3.10'
dependencies = [
    'fastapi>=0.115.0',
    'uvicorn[standard]>=0.30.0',
    'pydantic>=2.9.0',
    'apscheduler>=3.10.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.0.0',
    'pytest-asyncio>=0.23.0',
    'httpx>=0.27.0',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']